--- a/app/src/.streamlit/config.toml
+++ b/app/src/.streamlit/config.toml
@@ -14,6 +14,6 @@ showSidebarNavigation = false
 
 [theme]
 # Setting some basic config options related to the theme of the app
-base="light"
-primaryColor="#6550e6"
+base="dark"
+primaryColor="#598ddd"
 font="monospace"
